# mip-heuristics

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .zenodo.json  CITATION.cff  CLAUDE.md  CMakeLists.txt  README.md  plan.md  pyproject.toml
.claude/: settings.json
bench/: FPR_REPAIR_SEARCH_LOCKS.md  REPORT_effort_sweep.md  analyze_results.py  check_effort_drift.py  correctness_check.py  download_miplib.sh  instances_bench.txt  instances_hard25.txt  instances_hard_open.txt  instances_hard_probe.txt  instances_headtohead.txt  instances_plato.txt  instances_prelim.txt  instances_small.txt  instances_subset.txt  parse_highs_log.py  run_benchmark.py  run_plato.sh  test_analyze_results.py  test_check_effort_drift.py  test_parse_highs_log.py
cmake/: FetchHiGHS.cmake
docs/: PARAMETERS.md  README.md
src/: bandit_runner.h  contested_pdlp.cpp  contested_pdlp.h  continuous_loop.h  epoch_runner.h  fj.cpp  fj.h  fj_worker.cpp  fj_worker.h  fpr.cpp  fpr.h  fpr_core.cpp  fpr_core.h  fpr_lp.cpp  fpr_lp.h  fpr_lp_refs.cpp  fpr_lp_refs.h  fpr_strategies.cpp  fpr_strategies.h  fpr_val_select.cpp  fpr_val_select.h  fpr_var_order.cpp  fpr_var_order.h  heuristic_common.h  local_mip.cpp  local_mip.h  local_mip_caches.h  local_mip_construction.cpp  local_mip_construction.h  local_mip_core.cpp  local_mip_core.h  local_mip_search.cpp  local_mip_worker.cpp  local_mip_worker.h  mode_dispatch.cpp  mode_dispatch.h  opportunistic_runner.h  parallel_setup.h  portfolio.cpp  portfolio.h  (+20 more)
tests/: test_basic.cpp  test_common.h  test_contested_pdlp.cpp  test_continuous_loop.cpp  test_fj.cpp  test_fpr.cpp  test_fpr_lp.cpp  test_local_mip.cpp  (+6 more)
(+8 files in other folders)
